--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <section class="logo">
             <img class="main-logo" src="./img/toboolist-logo.jfif" alt="imangine logo toboolist">
-            <span class="logo-title">Tobolist</span>
+            <span class="logo-title"><strong>Toboolist</strong></span>
         </section>
     </header>
     <main class="background">
@@ -18,19 +18,19 @@
             <div class="task-padding">
             <span class="add-tag task-color">Add Task</span><span class="add-tag section-color">Add Section</span>
             </div>
-            <hr>
-            <h1 class="tilte-align">▼ New Task</h1>
-            <div><span class="circle circle-color">✓</span> Quartely Newsletter <span class="radius tag-color">Editorial</span></div>
-            <h1 class="tilte-align">▼ Todey</h1>
-            <div><span class="circle circle-color">✓</span> Recruting Blog post <span class="radius tag-color">Editorial</span></div>
-            <div><span class="circle circle-color">✓</span> Mobile app luaunch <span class="radius tag2-color">Q1 Goals</span></div>
-            <div><span class="circle circle2-color">✗</span> Interview John H. <span class="radius tag3-color">Recruting</span></div>
-            <div><span class="circle circle-color">✓</span> Summit update to mobile storefronts <span class="radius tag4-color">Mobile</span></div>
-            <h1 class="tilte-align">▼ Upcoming</h1>
-            <div><span class="circle circle2-color">✗</span> Schedule meeting with Alex</div>
-            <div><span class="circle circle-color">✓</span> Homepage refresh <span class="radius tag5-color">Website</span></div>
-            <div><span class="circle circle-color">✓</span> Onboard new Sales team members <span class="radius tag6-color">Sales</span></div>
-            <div><span class="circle circle-color">✓</span> Review editorial calendar <span class="radius tag-color">Editorial</span></div>
+            <hr class="hr-align">
+            <h1 class="title-align">🞃 New Task</h1>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Quartely Newsletter <span class="radius tag-color">Editorial</span></div>
+            <h1 class="title-align">🞃 Todey</h1>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Recruting Blog post <span class="radius tag-color">Editorial</span></div>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Mobile app luaunch <span class="radius tag2-color">Q1 Goals</span></div>
+            <div class="tag-padding"><span class="circle circle2-color"> ✗ </span> Interview John H. <span class="radius tag3-color">Recruting</span></div>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Summit update to mobile storefronts <span class="radius tag4-color">Mobile</span></div>
+            <h1 class="title-align">🞃 Upcoming</h1>
+            <div class="tag-padding"><span class="circle circle2-color"> ✗ </span> Schedule meeting with Alex</div>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Homepage refresh <span class="radius tag5-color">Website</span></div>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Onboard new Sales team members <span class="radius tag6-color">Sales</span></div>
+            <div class="tag-padding"><span class="circle circle-color"> ✓ </span> Review editorial calendar <span class="radius tag-color">Editorial</span></div>
         </section>
     </main>
     <footer></footer>
